# SuperFamiconv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  bayer.py  compile_flags.txt
.github/workflows/: merge.yml  release.yml
SuperFamiconv.xcodeproj/: project.pbxproj
SuperFamiconv.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: Options.h
include/LodePNG/: LodePNG
include/getopt-win/: getopt.c  getopt.h
include/getoptw/: getoptw.c
src/: About.h  Color.h  Common.h  Image.cpp  Image.h  Map.cpp  Map.h  Mode.h  Palette.cpp  Palette.h  Tiles.cpp  Tiles.h  sfc_map.cpp  sfc_palette.cpp  sfc_tiles.cpp  superfamiconv.cpp
